src/test/deca/context/invalid/added/var_not_init.deca
// Description:
//    Programme faisant une division par 0.
//
// Resultats:
//    erreur ligne 11 variable non initialisée.
//
// Historique:
//    cree le 07/01/2024

{
        println(x);
}
